--- a/package.json
+++ b/package.json
@@ -54,9 +54,12 @@
     "@storybook/react": "^8.2.9",
     "@storybook/react-webpack5": "^8.2.9",
     "@storybook/test": "^8.2.9",
+    "autoprefixer": "^10.4.20",
     "eslint-plugin-storybook": "^0.8.0",
+    "postcss": "^8.4.47",
     "prop-types": "^15.8.1",
     "storybook": "^8.2.9",
+    "tailwindcss": "^3.4.14",
     "webpack": "^5.94.0"
   }
 }
