--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "customizable_input_component",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Taras-Roboteckyi.github.io/customizable_input_component",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^11.2.7",
@@ -56,6 +57,7 @@
     "@storybook/test": "^8.2.9",
     "autoprefixer": "^10.4.20",
     "eslint-plugin-storybook": "^0.8.0",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.47",
     "prop-types": "^15.8.1",
     "storybook": "^8.2.9",
